--- a/index.html
+++ b/index.html
@@ -19,6 +19,23 @@
      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"
           media="print" onload="this.media='all'">
      <script src="https://kit.fontawesome.com/f5d39d5d44.js" crossorigin="anonymous" defer></script>
+
+     <script async src="https://www.googletagmanager.com/gtag/js?id=G-TW94Q47RR3"></script>
+     <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag() { dataLayer.push(arguments); }
+          gtag('js', new Date());
+
+          gtag('config', 'G-TW94Q47RR3');
+     </script>
+     <script async src="https://www.googletagmanager.com/gtag/js?id=G-6T43YSXKRN"></script>
+     <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag() { dataLayer.push(arguments); }
+          gtag('js', new Date());
+
+          gtag('config', 'G-6T43YSXKRN');
+     </script>
 </head>
 
 <body>
